--- a/style.css
+++ b/style.css
@@ -22,66 +22,88 @@ ol, ul {
 	list-style: none;
 }
 
-article.archive .article-rest {
-  margin: auto;
+.navbar-default {
+	padding: 25px 0;
+	border: 0;
+	background-color: transparent;
 }
-.featured-thumb {
-  margin: auto;
-  margin-top: 35px;
-  overflow: hidden;
-  width: 95%;
-  padding: 0px;
+
+.navbar-shrink {
+	background-color: #222;
 }
-.featured-thumb .img-meta {
-  position: absolute;
-  z-index: 9999;
-  background: rgba(0, 210, 222, 0.5);
-  width: 100%;
-  height: 100%;
-  left: 0px;
-  display: none;
-  text-align: center;
+
+.blogHeader {
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 420px;
+	position: relative;
+	float: left;
+	width: 100%;
 }
-.featured-thumb .img-meta .meta-icon {
-  display: inline-block;
-  font-size: 24px;
-  width: 36px;
-  background: #00595e;
-  border-radius: 4px;
-  margin-top: 150px;
+
+.dark-overlay {
+	background: rgba(0, 0, 0, 0.8);
+	height: 420px;
+	padding-top: 150px;
+	color: #ffffff;
 }
-.featured-thumb .img-meta .meta-link {
-  padding: 15px 25px;
-  color: #00bfc9;
-  padding-left: 26px;
+
+.vision {
+	text-align: center;
 }
-.featured-thumb .img-meta .meta-link:hover {
-  color: #02f2ff;
-  text-decoration: none;
+
+.vision .vision-border {
+	padding: 20px;
 }
-.featured-thumb .img-meta .meta-link i {
-  position: relative;
-  left: -19px;
+
+.vision-border {
+	border: 2px solid #ffffff;
+	width: 40%;
 }
-.featured-thumb .img-meta .meta-link .icon-link {
-  left: -17px;
+
+.centered {
+	margin: auto;
 }
-.featured-thumb .img-meta .img-meta-img .meta-link {
-  padding-left: 24px;
+
+.blog-post {
+	margin-top: 100px;
 }
-.featured-thumb:hover .img-meta {
-  background: rgba(0, 210, 222, 0.65);
-}
-.featured-thumb:hover img {
-  -webkit-transform: scale(1.05);
-  opacity: 0.98;
-}
+
 .featured-thumb img {
-  box-shadow: 0px 1px 2px #444;
-  margin-bottom: 0px;
-  transition: 0.4s all ease;
-  min-width: 100%;
-  height: auto;
+	padding:40px 0;
+	margin-left: 0;
+	height: auto;
+	max-width: 100%;
+}
+
+.clearfix::after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.divider {
+	width: 100%;
+	height: 5px;
+	padding-top: 80px;
+	border-bottom: 2px dashed #000000;
+	position: relative;
+}
+
+.pager {
+	padding-top: 80px
+}
+
+.footer {
+	letter-spacing: 2px;
+	padding-top: 45px;
+	background-color: #222;
+	height: 95px;
+	color: #ffffff;
+	font-size: 10px;
+	text-align: center;
+	float: left;
+	width: 100%;
 }
 
 @media screen and (min-width: 1200px) {
