--- a/style.css
+++ b/style.css
@@ -38,9 +38,11 @@ ol, ul {
 	position: relative;
 	float: left;
 	width: 100%;
+	margin-bottom: 50px;
 }
 
 .carousel-inner {
+	font-family: "capitolium-news-2", sans-serif;
 	height: 369px;
 }
 
@@ -54,7 +56,7 @@ ol, ul {
 	display: inline-block;
 	max-width: 1170px;
 	margin: auto;
-	top: 20%;
+	top: 15%;
 	text-align: center;
 }
 
@@ -64,7 +66,7 @@ ol, ul {
 	list-style: none;
 }
 
-.post-categories {
+.carousel-caption .post-categories {
 	position: relative;
 	padding-bottom: 10px;
 	margin-bottom: 10px;
@@ -82,18 +84,10 @@ ol, ul {
 	background: #ffffff;
 }
 
-.entry-title {
-	color: #ffffff;
-	font-family: 'Lora', serif;
-	font-style: italic;
-	font-size: 28px;
-	margin-bottom: 20px;
-}
-
 .carousel-caption .post-categories a, .carousel-caption .read-more a {
 	color: #ffffff;
-	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;
+	text-decoration: none;
 }
 
 .carousel-caption .read-more a {
@@ -105,36 +99,27 @@ ol, ul {
 	letter-spacing: 1px;
 }
 
-.dark-overlay {
-	background: rgba(0, 0, 0, 0.8);
-	height: 420px;
-	padding-top: 150px;
+.entry-title {
 	color: #ffffff;
+	font-family: "capitolium-news-2", sans-serif;
+	font-style: italic;
+	font-size: 28px;
+	margin-bottom: 20px;
 }
 
-.vision {
-	text-align: center;
+.entry-meta {
+	margin-bottom:20px;
 }
 
-.vision .vision-border {
-	padding: 20px;
-}
-
-.vision-border {
-	border: 2px solid #ffffff;
-	width: 40%;
-}
-
-.centered {
-	margin: auto;
+.entry-content {
+	margin:20px 0 0;
 }
 
 .blog-post {
-	margin-top: 100px;
+
 }
 
 .featured-thumb img {
-	padding:40px 0;
 	margin-left: 0;
 	height: auto;
 	max-width: 100%;
@@ -161,18 +146,27 @@ ol, ul {
 }
 
 .pager {
-	padding-top: 80px
+	padding-top: 80px;
+	padding-bottom: 20px;
+}
+
+.pager li>a {
+	border:0;
+	border-radius: 0;
+}
+
+.pager li>a:hover {
+	background: none;
 }
 
 .footer {
-	letter-spacing: 2px;
-	padding-top: 45px;
-	height: 95px;
-	color: #222;
-	font-size: 10px;
+	background-color: #f2f2f2;
+	color: #999;
+}
+
+.footer footer {
+	padding: 50px 0;
 	text-align: center;
-	float: left;
-	width: 100%;
 }
 
 @media screen and (min-width: 1200px) {
